# tokenizers

./: .gitignore
bindings/c/: Cargo.toml  Makefile  README.md  gen_bindings.sh
bindings/c/include/: module.modulemap  tokenizers.h
bindings/c/src/: lib.rs  models.rs  trainers.rs
bindings/c/swift/Tokenizers/: Package.swift  README.md
bindings/c/swift/Tokenizers/Lib/: readme.txt
bindings/c/swift/Tokenizers/Sources/Tokenizers/: Tokenizers.swift
bindings/c/swift/Tokenizers/Tests/TokenizersTests/: TokenizersTests.swift
bindings/c/tests/: Makefile  models.c
